# dx7-synthesizer

./: .gitattributes  .gitmodules  CMakeLists.txt  readme.md
res/luts/: hex_i32_coarse_log_mult.mem  hex_u16_exp.mem  hex_u16_log_sin.mem  hex_u32_fine_log_mult.mem  hex_u32_log_freq_to_phase.mem  hex_u32_note_to_log_freq.mem  hex_u64_algorithm_routing.mem  hex_u8_algorithm_routing.mem  hex_u8_level_scale.mem
src/: config.h  main.c
src/audio_driver/: audio_driver.c  audio_driver.h
src/luts/: generate_luts.c  generate_luts.h  read_luts.c  read_luts.h
src/synthesizer/: patch_file.c  patch_file.h  synthesizer.c  synthesizer.h  voice.c  voice.h
src/visualization/: visualization.c  visualization.h
src/web_server/: web_server.c  web_server.h
static/: index.html  script.js  style.css
